mark's fixes. notably: .append doesn't need closing tags, don't forget to include parentheses after function calls, define global variables at the beginning, removed spacing in table using css.

--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@
     background-color: white;
 }
 
+table {
+  border-spacing: 0; /* was 2px */
+}
+
+table td {
+  padding: 0; /* was 1px */
+}
+
 .control {
     background-color: lightgray;
     margin: 3px;
